Changes in version 1.2.10
-------------------------

  * the debugger window is hidden only after a short delay when it is
    closed, this fixes the flickering while using the step buttons
  * the editor buffer in the monitor has been increased from 120 to 160
    lines
  * memory dump is now also shown in ASCII format
  * in addition to the default hexadecimal format, it is also possible
    to specify numbers in the monitor in binary (e.g. %1010), octal
    (12o), and decimal (10l) format
  * new "step" buttons for stepping to the 16-bit address at the top of
    the stack ('Return') or any 16-bit address specified by the user
    ('Step to')
  * the debugger prints more detailed information about syntax and
    runtime errors in Lua scripts, and there is a new button to insert
    an empty breakpoint callback function
  * window icons have been implemented on non-Windows platforms if the
    emulator is built with FLTK 1.3.3 or newer
  * added support for building with FLTK 1.3.x and Lua 5.2/5.3
  * minor bug fixes

Changes in version 1.2.9.2
--------------------------

  * minor bug fixes

Changes in version 1.2.9.1
--------------------------

  * some improvements and optimizations in the p4fliconv and compress
    utilities
  * a few minor bugs have been fixed

Changes in version 1.2.9
------------------------

  * added a C interface that allows using the emulator as a shared
    library in other programs; the library and header file can be found
    in the 'plus4lib' subdirectory of the binary packages, and a simple
    example program with compile instructions is also included
  * implemented IEC level MPS-801 printer emulation, in addition to the
    previously existing hardware level MPS-802 emulation
  * added a new button to the debugger GUI that makes it possible to
    break only when a branch is taken (i.e. the opposite of 'Step over')
  * more accurate PAL emulation in OpenGL mode when the display quality
    is set to 3